sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: not found: value getNombreValeur
  longueur=getNombreValeur()
           ^AlgBubbleSort1:11: error: not found: value longeur
    for(i<- 0 to longeur-k){
                 ^